--- a/Project/Тед Нельсон/index.html
+++ b/Project/Тед Нельсон/index.html
@@ -1,61 +1,91 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="Теодор Холм Нельсон предвидел интерактивный компьютерный экран как новый дом человека и начал разрабатывать документацию для будущего">
+    <meta name="description"
+        content="Теодор Холм Нельсон предвидел интерактивный компьютерный экран как новый дом человека и начал разрабатывать документацию для будущего">
     <meta name="keywords" content="Нельсон, гипертекст, зигзаг">
-    <meta http-equiv="refresh" content=3>
+
     <title>Тед Нельсон</title>
-</head>        
+</head>
+
 <body>
     <q>Я думал, произойдет настоящая революция, а вижу полное предательство</q>
     <cite>-Тед Нельсон</cite>
     <h1>Теодор Хольм Нельсон</h1>
     <h2>Родился 17 июня 1937 года в Чикаго, штат Иллинойс, США</h2>
     <figure>
-        <img src="Тед Нельсон.jpg" alt="Нельсон" width="400" height="280">
+        <img src="img/Тед Нельсон.jpg" alt="Нельсон" width="400" height="280">
         <figcaption>Тед Нельсон</figcaption>
-    </figure>   
-        <p>В 1960 году утонченный молодой житель Нью-Йорка, начинающий философ и кинорежиссер Теодор Хольм Нельсон представил себе интерактивный экран компьютера как новый дом человеческой расы и начал разрабатывать документы будущего. В то время компьютеры были размером с комнату и не имели интерактивных экранов. Персональные компьютеры будут изобретены только через десять лет. По этим и многим другим причинам с именем Теда Нельсона чаще всего связывают прилагательное "провидец"</p>
-        <p><img src="art_intertwingled.png" alt="Структура HTML" width="360" height="287"></p>
-        <p>Автор термина «гипертекст» и неутомимый сторонник создания глобальной системы взаимосвязанных сетей для самостоятельной публикации, Тед Нельсон на протяжении 50 лет был факелоносцем того, какими могут быть компьютеры. По иронии судьбы, Тед Нельсон также является историком, составившим карту того, как компьютерный мир стал таким, какой он есть. Чтобы узнать о жутко точных предсказаниях Теда и ознакомиться с его изобретениями, поситите этот сайт и погрузитесь в мир будущего, который до сих пор не реализован в полной мере.</p>
-        <img src="Далее.png" alt="Далее" width="80" height="30">
-        <p>Теодор Хольм Нельсон, родившийся в 1937 году, называет себя не технарем или гиком, а «системным гуманистом», как Бакминстер Фуллер.</p>
-        <img src="Далее.png" alt="Далее" width="80" height="30">
-        <p>Тед получил степень бакалавра в Суортморском колледже, степень магистра в Гарвардском университете, степень доктора философии в Кейо и почетную степень доктора философии в Университете Чепмена. Он опубликовал одиннадцать книг и имеет несколько патентов.</p>
-        <img src="Далее.png" alt="Далее" width="80" height="30">
-        <p>Тед наиболее известен тремя вещами:
-            <ul>
-                <li>вдохновляя детей, молодежь и ученых-компьютерщиков по всему миру своими идеями, своим активным присутствием и книгами 
-            <cite><i>«Компьютерная библиотека»</i></cite> (1974) и 
-            <cite><i>«Литературные машины» (1981);</i></cite></li>
-                <li>введение слова «гипертекст»;</li>
-                <li>Проект <cite>Xanadu&reg;</cite>, попытка Теда создать глобальную гипертекстовую систему еще до появления Интернета.</li>
-            </ul>
-        </p>
-        <img src="Далее.png" alt="Далее" width="80" height="30">
-        <p>Тед родился в театральной семье, но воспитывался в Нью-Йорке бабушкой и дедушкой по материнской линии, с детства любил средства массовой информации и кино, а в юном возрасте стал искусным писателем. В колледже Суортмор, на основе своего 
-        <a href="https://www.youtube.com/watch?v=AXlyMrv8_dQ&t=8s" target="_blank">студенческого фильма</a>, он решил, что действительно является кинорежиссером, что непосредственно привело его к компьютерным инновациям.</p>
-        <p>Будучи аспирантом в Гарварде (1960-61), Тед компьютерный курс и в скором времени спрогнозирован — на основе его знание кино и писательский опыт — что интерактивный экран должен был стать новым домом для человеческой расы.</p>
-        <p><img src="Далее.png" alt="Далее" width="80" height="30"></p>
-        <p>Во время этого предсказания никто, кроме горстки людей в элитных профессиях никогда не видели интерактивного экрана.</p>
-        <img src="Далее.png" alt="Далее" width="80" height="30">
-        <p>Это понимание вдохновило Теда на создание этого слова «гипертекст» и изложить свое видение глобального доступная сеть самиздата, которая на протяжении десятилетий стремился бы строить. Он считает Всемирную паутину оболванивание или, что более милосердно, небольшая часть его Идеи.</p>
-        <img src="group.jpg." alt="Тед Нельсон при разработке гипертекста" width="400" height="260">
-        <figcaption>Гипертекст, 1989 год</figcaption>
-        <img src="Далее.png" alt="Далее" width="80" height="30">
-        <p>Тед продолжает работать над проектом Xanadu с цель стандартизации другого вида документов с помощью постоянные, видимые соединения. Джейсон Скотт предложил термин «документ Нельсона» для таких расположенных рядом, явно связанных между собой публикации, которые возможны только на интерактивном экран.</p>
-        <img src="Далее.png" alt="Далее" width="80" height="30">
-        <p>Другое основное изобретение Теда — гипертогональ структура с торговой маркой ZigZag&reg;, многомерная, неиерархическая Конструктор электронных таблиц и приложений.</p>
-        <img src="Далее.png" alt="Далее" width="80" height="30">
-        <p>В 2016 году Тед появился на большом экране в фильме 
-            <cite>«Вернер»</cite> документальный фильм Херцога «Lo and Behold», в котором элегантно резюмируется работа Теда за 
-            <cite>
-                <a href="https://www.youtube.com/watch?v=Bqx6li5dbEY" target="_blank">четыре минуты.</a></cite></p>
+    </figure>
+    <p>В 1960 году утонченный молодой житель Нью-Йорка, начинающий философ и кинорежиссер Теодор Хольм Нельсон
+        представил себе интерактивный экран компьютера как новый дом человеческой расы и начал разрабатывать документы
+        будущего. В то время компьютеры были размером с комнату и не имели интерактивных экранов. Персональные
+        компьютеры будут изобретены только через десять лет. По этим и многим другим причинам с именем Теда Нельсона
+        чаще всего связывают прилагательное "провидец"</p>
+    <p><img src="img/art_intertwingled.png" alt="Структура HTML" width="360" height="287"></p>
+    <p>Автор термина «гипертекст» и неутомимый сторонник создания глобальной системы взаимосвязанных сетей для
+        самостоятельной публикации, Тед Нельсон на протяжении 50 лет был факелоносцем того, какими могут быть
+        компьютеры. По иронии судьбы, Тед Нельсон также является историком, составившим карту того, как компьютерный мир
+        стал таким, какой он есть. Чтобы узнать о жутко точных предсказаниях Теда и ознакомиться с его изобретениями,
+        поситите этот сайт и погрузитесь в мир будущего, который до сих пор не реализован в полной мере.</p>
+    <img src="img/Далее.png" alt="Далее" width="80" height="30">
+    <p>Теодор Хольм Нельсон, родившийся в 1937 году, называет себя не технарем или гиком, а «системным гуманистом», как
+        Бакминстер Фуллер.</p>
+    <img src="img/Далее.png" alt="Далее" width="80" height="30">
+    <p>Тед получил степень бакалавра в Суортморском колледже, степень магистра в Гарвардском университете, степень
+        доктора философии в Кейо и почетную степень доктора философии в Университете Чепмена. Он опубликовал одиннадцать
+        книг и имеет несколько патентов.</p>
+    <img src="img/Далее.png" alt="Далее" width="80" height="30">
+    <p>Тед наиболее известен тремя вещами:
+    <ul>
+        <li>вдохновляя детей, молодежь и ученых-компьютерщиков по всему миру своими идеями, своим активным присутствием
+            и книгами
+            <cite><i>«Компьютерная библиотека»</i></cite> (1974) и
+            <cite><i>«Литературные машины» (1981);</i></cite>
+        </li>
+        <li>введение слова «гипертекст»;</li>
+        <li>Проект <cite>Xanadu&reg;</cite>, попытка Теда создать глобальную гипертекстовую систему еще до появления
+            Интернета.</li>
+    </ul>
+    </p>
+    <img src="img/Далее.png" alt="Далее" width="80" height="30">
+    <p>Тед родился в театральной семье, но воспитывался в Нью-Йорке бабушкой и дедушкой по материнской линии, с детства
+        любил средства массовой информации и кино, а в юном возрасте стал искусным писателем. В колледже Суортмор, на
+        основе своего
+        <a href="https://www.youtube.com/watch?v=AXlyMrv8_dQ&t=8s" target="_blank">студенческого фильма</a>, он решил,
+        что действительно является кинорежиссером, что непосредственно привело его к компьютерным инновациям.
+    </p>
+    <p>Будучи аспирантом в Гарварде (1960-61), Тед компьютерный курс и в скором времени спрогнозирован — на основе его
+        знание кино и писательский опыт — что интерактивный экран должен был стать новым домом для человеческой расы.
+    </p>
+    <p><img src="img/Далее.png" alt="Далее" width="80" height="30"></p>
+    <p>Во время этого предсказания никто, кроме горстки людей в элитных профессиях никогда не видели интерактивного
+        экрана.</p>
+    <img src="img/Далее.png" alt="Далее" width="80" height="30">
+    <p>Это понимание вдохновило Теда на создание этого слова «гипертекст» и изложить свое видение глобального доступная
+        сеть самиздата, которая на протяжении десятилетий стремился бы строить. Он считает Всемирную паутину
+        оболванивание или, что более милосердно, небольшая часть его Идеи.</p>
+    <img src="img/group.jpg." alt="Тед Нельсон при разработке гипертекста" width="400" height="260">
+    <figcaption>Гипертекст, 1989 год</figcaption>
+    <img src="img/Далее.png" alt="Далее" width="80" height="30">
+    <p>Тед продолжает работать над проектом Xanadu с цель стандартизации другого вида документов с помощью постоянные,
+        видимые соединения. Джейсон Скотт предложил термин «документ Нельсона» для таких расположенных рядом, явно
+        связанных между собой публикации, которые возможны только на интерактивном экран.</p>
+    <img src="img/Далее.png" alt="Далее" width="80" height="30">
+    <p>Другое основное изобретение Теда — гипертогональ структура с торговой маркой ZigZag&reg;, многомерная,
+        неиерархическая Конструктор электронных таблиц и приложений.</p>
+    <img src="img/Далее.png" alt="Далее" width="80" height="30">
+    <p>В 2016 году Тед появился на большом экране в фильме
+        <cite>«Вернер»</cite> документальный фильм Херцога «Lo and Behold», в котором элегантно резюмируется работа Теда
+        за
+        <cite>
+            <a href="https://www.youtube.com/watch?v=Bqx6li5dbEY" target="_blank">четыре минуты.</a></cite>
+    </p>
     <small>&copyВсе права защищены</small>
 </body>
-</html>
 
-    
+</html>
