--- a/Lessons/Lesson04/index.html
+++ b/Lessons/Lesson04/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <link href="style.css" rel="stylesheet">
     <title>Структура HTML документа</title>
+    <script src="script.js" defer></script>
 </head>
+
 <body>
-    <a href="https://netology.ru/blog/hey-javascript" target="_blank" title="Перейти на сайт netology.ru">Материал взять с сайта</a>
-    <a href="#h2.">Чем хорош JavaScript</a>
-    <a href="#h2/">Ограничения</a>
-    <a href="https://netology.ru/blog/hey-javascript" target="_blank" title="Перейти на сайт netology.ru">
-        <img src="html_css_javascript.gif" alt="html_css_javascript" widht="250" class="top-right"></a>
-        <h1>Зачем учить JavaScript и где он пригодится</h1>
-    <p>JavaScript — это лучший друг HTML и CSS. HTML задает разметку сайта, CSS отвечает за внешний вид,
+    <h1>Зачем учить JavaScript и где он пригодится</h1>
+    <p aling="justify">JavaScript — это лучший друг HTML и CSS. HTML задает разметку сайта, CSS отвечает за внешний вид,
         а JavaScript все это оживляет.
-    <p>С помощью кода на JavaScript программист определяет, как страница отреагирует на действия
+    <p aling="justify">С помощью кода на JavaScript программист определяет, как страница отреагирует на действия
         пользователя.</p>
-    <p>JavaScript-код загружают отдельным файлом, или пишут прямо в коде страницы.</p>
-    <p>Сейчас JavaScript — единственный язык программирования для браузеров.</p>
-    <p>Он работает под Windows, macOS, Linux и на мобильных платформах, то есть везде.</p>
-    <p>Он работает под Windows, macOS, Linux и на мобильных платформах, то есть везде.</p>
-    <p>Если не знаешь JavaScript, делать в программировании интерактивных сайтов нечего.</p>
+    <p aling="justify">JavaScript-код загружают отдельным файлом, или пишут прямо в коде страницы.</p>
+    <p aling="justify">Сейчас JavaScript — единственный язык программирования для браузеров.</p>
+    <p aling="justify">Он работает под Windows, macOS, Linux и на мобильных платформах, то есть везде.</p>
+    <p aling="justify">Он работает под Windows, macOS, Linux и на мобильных платформах, то есть везде.</p>
+    <p aling="justify">Если не знаешь JavaScript, делать в программировании интерактивных сайтов нечего.</p>
     <h3>Без JavaScript делать в программировании интерактивных сайтов нечего</h3>
-    <h2 id="h2.">Чем хорош JavaScript</h2>
-    <p>JavaScript полностью интегрирован с HTML, он способен как угодно менять веб-страницу. В ответ на событие программист может:
-        <ul>
-            <li>на лету вставить в HTML-код любые теги;</li>
-            <li>задать внешний вид элементов через класс и атрибуты HTML;</li>
-            <li>переместить любой элемент;</li>
-            <li>запросить у пользователя данные;</li>
-            <li>отправить запрос на сервер (технология AJAX).</li>
-        </ul>
+    <h2>Чем хорош JavaScript</h2>
+    <p aling="justify">JavaScript полностью интегрирован с HTML, он способен как угодно менять веб-страницу. В ответ на
+        событие программист может:
+    <ul>
+        <li>на лету вставить в HTML-код любые теги;</li>
+        <li>задать внешний вид элементов через класс и атрибуты HTML;</li>
+        <li>переместить любой элемент;</li>
+        <li>запросить у пользователя данные;</li>
+        <li>отправить запрос на сервер (технология AJAX).</li>
+    </ul>
     </p>
-    <p>Это только то, что сразу пришло в голову JavaScript может намного больше, в пределах своей страницы он Бог.</p>
-    <p>JavaScript — подходящий язык для изучения программирования. Он достаточно прост, но содержит все
+    <p aling="justify">Это только то, что сразу пришло в голову JavaScript может намного больше, в пределах своей
+        страницы он Бог.</p>
+    <p aling="justify">JavaScript — подходящий язык для изучения программирования. Он достаточно прост, но содержит все
         фундаментальные вещи: алгоритмы, объектно-ориентированную модель, структуры данных. Если традиционные языки для
         обучения — Pascal и Basic — несут мало практической пользы, то JavaScript — рабочая лошадка.</p>
-    <p>Начинать с JavaScript хорошо и потому, что синтаксически он похож на великий и ужасный язык С.
+    <p aling="justify">Начинать с JavaScript хорошо и потому, что синтаксически он похож на великий и ужасный язык С.
         Изучив JavaScript, получишь базовое представление обо всех «сиобразных» языках: С++, C#, Java, PHP. Они задают
         тренд в своих областях и весьма популярны, поэтому для новичка важно познакомиться с синтаксисом С.</p>
-    <p>Программа на JavaScript — это простой текст. Писать на JavaScript можно в любом текстовом
+    <p aling="justify">Программа на JavaScript — это простой текст. Писать на JavaScript можно в любом текстовом
         редакторе.</p>
     <h3>В пределах своей страницы JavaScript — Бог</h3>
-    <h2 id="h2/">Ограничения</h2>
+    <h2>Ограничения</h2>
     <p>Классический JavaScript — это язык программирования для интернета, он бессилен за пределами браузера. С помощью
         JavaScript нельзя запустить программу на компьютере или записать файл в нужную папку.</p>
     <p>Из-за правил безопасности браузеры ограничивают мощь JavaScript и за пределами «родной» страницы. Управлять
@@ -52,6 +52,6 @@
         программирования для интернета.</p>
     <h3>На JavaScript пишут для интернета и браузеров.</h3>
     <p>Нажми на меня</p>
-    <script src="script.js" defer></script>
 </body>
+
 </html>
