--- a/Practices/Practice01/index.html
+++ b/Practices/Practice01/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content=3; charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="keywords" content="resume, skills, project">
     <meta name="description" content="I recently updated my resume to highlight my new skills in project management and teamwork.">
     <title>World</title>
