--- a/Practices/Practice03/index.html
+++ b/Practices/Practice03/index.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description"
-        content="Реклама об открытии магазина Галамарт и продажа картин и других работ, выполненные маслом">
+    <meta name="description" content="Реклама об открытии магазина Галамарт и продажа картин и других работ, выполненные маслом">
     <meta name="keywords" content="магазин, Галамарт, картины, подарки, работы маслом">
-    <meta http-equiv="refresh" content=3>
     <title>Реклама</title>
 </head>
-
 <body>
     <hr />
     <h1 align="center">14, 15, 16 апреля! Праздничное открытие! Магазин промтоваров Галамарт!</h1>
@@ -92,5 +88,4 @@
         <font size="5">238-77-65.</font>
     </p>
 </body>
-
 </html>
