--- a/Project/Computer_Geniuses/Ted_Nelson.html
+++ b/Project/Computer_Geniuses/Ted_Nelson.html
@@ -36,6 +36,7 @@
             Многие из его идей помогли создать концептуальную структуру современного интернета.</p>
             <figure><img src="img/Ted_Nelson.jpg" alt="Нельсон" width="400"><figcaption>Тед Нельсон</figcaption></figure>
         </section>
+        <article>
             <h2>Юность</h2>
             <hr>
             <p align="justify">
@@ -188,9 +189,10 @@
                     <a href="https://www.youtube.com/watch?v=Bqx6li5dbEY" target="_blank" title="Перейти на YouTube">четыре минуты.</a>
                 </cite>
             </p>
+        </article>    
     </main>
     <footer>
-    <small>&copy; Все права защищены</small>
+        <p>&copy; Все права защищены</p>
     </footer>
 </body>
 </html>
