--- a/Project/Computer_Geniuses/Catalog.html
+++ b/Project/Computer_Geniuses/Catalog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="Изучение истории и того, как она формирует нас.">
-    <meta name="keywords" content="Нельсон, гипертекст, компьютерная библиотека, ">
+    <meta name="keywords" content="Нельсон, гипертекст, компьютерная библиотека.">
     <title>Каталог</title>
 </head>
 <body>
@@ -21,35 +21,74 @@
     </header>
     <main>
         <hr>
+        <img src="img/pngwing.com.png" alt="Абстрация виртуального мира" width="100">
         <h2>Ученные, изменившие компьютерный мир</h2>
         <hr>
-        <ul>
-            <li><h3><a href=""><font face="Comic Sans MS">Алан Мэтисон Тьюринг</font></a></h3> 
-                <p> <img src="img/Alan_Turing.webp" alt="На фото изображен Алан Тьюринг"></p>
-                <p align="justify"><strong>Кто он: <font size="5" face="Comic Sans MS">А</font>лан Тьюринг</strong> &mdash; математик, криптоаналитик и логик. 
-                Его называют отцом теоретической информатики и искусственного интеллекта. 
-                <strong>Что он сделал:</strong> во время Второй мировой войны он разработал множество методов взлома немецких шифров. 
-                Тьюринг построил электромеханическую машину, которая могла найти настройки машины Энигмы. 
-                Он формализовал концепции вычислений и алгоритмов с помощью машины Тьюринга, машины, которая может быть адаптирована для симуляции логики любых алгоритмов. 
-                <strong>Основные достижения:</strong> он был удостоен премии Смита, офицера Ордена Британской империи и члена Королевского общества. 
-                С 1966 года Ассоциация вычислительной техники ежегодно присуждает премию Тьюринга за вклад в вычислительное сообщество.</p>
-            </li>
-            <li><h3><a href=""><font face="Comic Sans MS">Деннис Ритчи</font></a></h3>
-                <p> <img src="img/Dennis_Ritchie.webp" alt="На фото изображен Деннис Ритчи"></p>
-                <p align="justify"><strong>Кто он: <font size="5" face="Comic Sans MS">Д</font>еннис Ритчи</strong> был революционным ученым-компьютерщиком, который сыграл ключевую роль в разработке языка программирования «С» и операционной системы Unix. 
+        <selection id="alan-turing">
+            <h3><a href=""><font face="Comic Sans MS">Алан Мэтисон Тьюринг</font></a></h3>
+            <p><img src="img/Alan_Turing.jpg" alt="На фото изображен Алан Тьюринг" width="500"></p>
+            <p align="justify">
+                <strong>Кто он: <font size="5" face="Comic Sans MS">А</font>лан Тьюринг</strong> &mdash; математик, криптоаналитик и логик. Его называют отцом теоретической информатики и искусственного интеллекта.
+                <br>
+                <strong>Что он сделал:</strong> во время Второй мировой войны он разработал множество методов взлома немецких шифров. Тьюринг построил электромеханическую машину, которая могла найти настройки <em>машины Энигмы</em>. Он формализовал концепции вычислений и алгоритмов с помощью машины Тьюринга, машины, которая может быть адаптирована для симуляции логики любых алгоритмов.<br> 
+                <strong>Основные достижения:</strong> он был удостоен премии Смита, офицера Ордена Британской империи и члена Королевского общества. С 1966 года <i>«Ассоциация вычислительной техники»</i> ежегодно присуждает премию Тьюринга за вклад в вычислительное сообщество.
+            </p>
+        </selection>
+        <section id="bill-gates">
+            <h3><a href=""><font face="Comic Sans MS">Билл Гейтс</font></a></h3>
+            <p><img src="img/Bill_Gates.jpg.webp" alt="На фото изображен Билл Гейтс" width="500"></p>
+            <p align="justify">
+                <strong>Кто он: </strong><font size="5" face="Comic Sans MS">Б</font>илл Гейтс</strong> &mdash; американский предприниматель, один из <em>основателей компании Microsoft</em>, неоднократно становился самым богатым человеком в мире по версии журнала <cite>«Forbes».</cite>
+                <br> 
+                <strong>Что он сделал:</strong> В течение первых 5 лет работы в Microsoft Гейтс лично следил за каждой строкой кода, которую компания отправляла, часто исправляя те, которые он считал ошибочными или неправильными. 
+                В первые дни он и Пол Аллен написали полный интерпретатор языка BASIC на ассемблере для компьютера, к которому у них даже не было доступа, и который имел только 4 Кбайт памяти. 
+                Они написали это на PDP-10, работающем на эмуляторе Intel 8080.
+                <br>
+                <strong>Основные достижения:</strong> он был награжден «Национальной медалью» за технологии и инновации, заслуженным членом «Британского компьютерного общества» и премией Бауэра за лидерство в бизнесе.
+            </p>
+        </section>
+        <section id="dennis-ritchie">
+            <h3><a href=""><font face="Comic Sans MS">Деннис Ритчи</font></a></h3>
+            <p><img src="img/Dennis_Ritchie.jpg" alt="На фото изображен Деннис Ритчи" width="500"></p>
+            <p align="justify">
+                <strong>Кто он: <font size="5" face="Comic Sans MS">Д</font>еннис Ритчи</strong> был революционным ученым-компьютерщиком, который сыграл ключевую роль в разработке языка программирования «С» и операционной системы Unix. 
                 Он работал в Lucent Technologies & Bell Labs и защитил кандидатскую диссертацию на тему <i>«Структура программы и вычислительная сложность»</i>. 
-                Тем не менее он никогда официально не получил докторскую степень. 
+                Тем не менее он никогда официально не получил докторскую степень.
+                <br> 
                 <strong>Что он сделал:</strong> Он разработал язык программирования «C», на котором основаны многие используемые в настоящее время машинный язык и технологии, включая ваш PS4 / Xbox. 
-                Ричи создал многопользовательскую операционную систему под названием Unix. Он также известен разработкой ALTRAN, B, BCPL и Multics. 
-                <strong>Основные достижения:</strong> Ричи был удостоен премии Тьюринга, медали Хэмминга от IEEE, премии компьютерных пионеров, стипендиата Музея истории компьютеров и премии Гарольда Пендера.</p>
-            </li>
-            <li>
-                <h3><a href=""><font face="Comic Sans MS">Тим Бернерс-Ли</font></a></h3>
-                <p> <img src="img/Tim_Berners_Lee.webp" alt="На фото изображен Тим Бернерс-Ли"></p>
-                <p align="justify"><strong>Кто он: <font size="5" face="Comic Sans MS">Т</font></strong>им Бернерс-Ли &mdash; ученый-компьютерщик, наиболее известный как изобретатель Всемирной паутины. 
-                Он является директором <abbr title="World Wide Web Consortium">W3C</abbr>, Инициативы Web Science Research, а также старшим научным сотрудником и заведующим кафедрой основателей (<abbr title="Massachusetts Institute of Technology">MIT</abbr>). 
+                Ричи создал многопользовательскую операционную систему под названием Unix. Он также известен разработкой ALTRAN, B, <abbr title="Basic Combined Programming Language">BCPL</abbr> и Multics.
+                <br> 
+                <strong>Основные достижения:</strong> Ричи был удостоен премии Тьюринга, медали Хэмминга от <abbr title="Institute of Electrical and Electronics Engineers">IEEE</abbr>, премии компьютерных пионеров, стипендиата «Музея истории компьютеров» и премии Гарольда Пендера.
+            </p>
+        </section>
+        <section id="tim-berners">
+            <h3><a href=""><font face="Comic Sans MS">Тим Бернерс-Ли</font></a></h3>
+            <p><img src="img/Tim_Berners.jpg" alt="На фото изображен Тим Бернерс-Ли" width="500"></p>
+            <p align="justify">
+                <strong>Кто он: <font size="5" face="Comic Sans MS">Т</font></strong>им Бернерс-Ли &mdash; ученый-компьютерщик, наиболее известный как изобретатель <em>Всемирной паутины</em>.
+                Он является директором <abbr title="World Wide Web Consortium">W3C</abbr>, Инициативы Web Science Research, а также старшим научным сотрудником и заведующим кафедрой основателей (<abbr title="Massachusetts Institute of Technology">MIT</abbr>).
+                <br> 
                 <strong>Что он сделал:</strong> в 1989 году Тим сделал предложение по системе управления информацией, и он успешно реализовал связь между <abbr title="HyperText Transfer Protocol">HTTP</abbr>-клиентом и сервером через Интернет. 
-                Он также является ключевой фигурой в <a href="https://www.data.gov.uk/" target="_blank">data.gov.uk</a>, правительственном проекте Великобритании по открытию всех данных, полученных для официальной работы, для свободного повторного использования. 
+                Он также является ключевой фигурой в <a href="https://www.data.gov.uk/" target="_blank">data.gov.uk</a>, правительственном проекте Великобритании по открытию всех данных, полученных для официальной работы, для свободного повторного использования.
+                <br> 
                 <strong>Основные достижения:</strong> Тим был посвящен в рыцари королевой Елизаветой II за выдающуюся работу, удостоен награды Software System Award, Гордости Британии и Молодого новатора года (1995).
+            </p>
+        </section>
+        <section id="ted-nelson">
+            <h3><a href="Ted_Nelson.html" target="_blank"><font face="Comic Sans MS">Тед Нельсон</font></a></h3>
+            <p><img src="img/Ted-Nelson.jpg" alt="На фото изображен Тед Нельсон" width="500"></p>
+            <p align="justify">
+                <strong>Кто он: <font size="5" face="Comic Sans MS">Т</font></strong>ед Нельсон &mdash; американский социолог, философ, известный как один из пионеров информационных технологий и основатель концепции гепертекста.
+                <br>
+                <strong>Что он сделал:</strong> Тед ввел термины <em>«гипертекст»</em> и <em>«гипермедиа»</em> в 1963 году и опубликовал их в 1965 году. Ему также приписывают первое использование слов «трансклюзия», «виртуальность», «интертвингулярность» и «теледильдоника», создатель гипертекстовой системы Xanadu.
+                <br>
+                <strong>Основные достижения:</strong>В 1998 году на Международной конференции по всемирной паутине, Нельсону была присуждена Мемориальная премия Юрия Рубинского за его вклад в информационные технологии и инфраструктуру.
+                В 2001 году он был посвящен в рыцари французским правительством, став официальным членом французской организации «Officier des Arts et Lettres».
+            </p>
+        </section>
     </main>
-
+    <footer> 
+        <small>&copy; 2024 Lopation. Все права защищены.</small> 
+    </footer> 
+</body>
+</html>
