--- a/Project/Computer_Geniuses/Library.html
+++ b/Project/Computer_Geniuses/Library.html
@@ -6,14 +6,14 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="Изучение истории и того, как она формирует нас.">
     <meta name="keywords" content="Нельсон, гипертекст, компьютерная библиотека.">
-    <title>Каталог</title>
+    <title>Библиотека</title>
 </head>
 <body>
     <header>
         <nav class="menu">
             <ul>
                 <li><a href="">Главная</a></li>
-                <li><a href="">Каталог</a></li>
+                <li><a href="">Библиотека</a></li>
                 <li><a href="">Галерея</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <hr>
-        <img src="img/pngwing.com.png" alt="Абстрация виртуального мира" width="100">
+        <img src="img/pngwing.com.png" alt="Знак гения" width="100">
         <h2>Ученные, изменившие компьютерный мир</h2>
         <hr>
         <selection id="alan-turing">
