--- a/Project/Computer_Geniuses/Ted_Nelson.html
+++ b/Project/Computer_Geniuses/Ted_Nelson.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="">Главная</a></li>
-                <li><a href="index.html">Каталог</a></li>
+                <li><a href="index.html">Библиотека</a></li>
                 <li><a href="">Галерея</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
