--- a/Project/Computer_Geniuses/Library.html
+++ b/Project/Computer_Geniuses/Library.html
@@ -88,7 +88,7 @@
         </section>
     </main>
     <footer> 
-        <small>&copy; 2024 Lopation. Все права защищены.</small> 
+        <small>&copy; 2024 Divin. Все права защищены.</small> 
     </footer> 
 </body>
 </html>
