--- a/Practices/Practice06/index.html
+++ b/Practices/Practice06/index.html
@@ -11,9 +11,7 @@
             <legend>Многострочные текстовые поля</legend>
             <textarea name="message" cols="81" rows="5">    Вне зависимости от того, о чем вы мечтаете — начинайте над этим работать! 
     И тогда в вашей жизни начнут происходить самые настоящие чудеса!
-            </textarea> 
-    <br>
-    <br>
+            </textarea><br><br>
             <label for="message">Введите текст</label>
             <input type="message" id="message" name="message">
             <button type="submit">Отправить</button>
@@ -39,9 +37,7 @@
                 <option value="l14">Прогулки</option>
                 <option value="l15">Полноценный сон</option>
                 <option value="l16">Путешествия</option>
-            </select> 
-    <br>
-    <br>
+            </select><br><br>
             <p><strong>Черты характера</strong></p>
             <select id="skill" name="skill" size=15 multiple>
                 <option selected value="s">Выберите пункт</option>
@@ -59,9 +55,7 @@
                 <option value="s12">Скромность</option>
                 <option  value="s13">Мудрость</option>
                 <option value="s14">Общительность</option>
-            </select>  
-    <br>
-    <br>
+            </select><br><br>
             <button type="submit">Отправить</button> 
         </fieldset>
     </form>
