--- a/Project/Computer_Geniuses/Ted_Nelson.html
+++ b/Project/Computer_Geniuses/Ted_Nelson.html
@@ -275,7 +275,7 @@
         </article>    
     </main>
     <footer>
-        <small>&copy; 2024 Divin. Все права защищены.</small>
+        <small>&copy; 2024 Lopation. Все права защищены.</small>
     </footer>
 </body>
 </html>
