--- a/Project/Computer_Geniuses/Library.html
+++ b/Project/Computer_Geniuses/Library.html
@@ -24,7 +24,7 @@
         <img src="img/pngwing.com.png" alt="Знак гения" width="100">
         <h2>Ученные, изменившие компьютерный мир</h2>
         <hr>
-        <selection id="alan-turing">
+        <section id="alan-turing">
             <h3><a href=""><font face="Comic Sans MS">Алан Мэтисон Тьюринг</font></a></h3>
             <p><img src="img/Alan_Turing.jpg" alt="На фото изображен Алан Тьюринг" width="500"></p>
             <p align="justify">
@@ -33,7 +33,7 @@
                 <strong>Что он сделал:</strong> во время Второй мировой войны он разработал множество методов взлома немецких шифров. Тьюринг построил электромеханическую машину, которая могла найти настройки <em>машины Энигмы</em>. Он формализовал концепции вычислений и алгоритмов с помощью машины Тьюринга, машины, которая может быть адаптирована для симуляции логики любых алгоритмов.<br> 
                 <strong>Основные достижения:</strong> он был удостоен премии Смита, офицера Ордена Британской империи и члена Королевского общества. С 1966 года <i>«Ассоциация вычислительной техники»</i> ежегодно присуждает премию Тьюринга за вклад в вычислительное сообщество.
             </p>
-        </selection>
+        </section>
         <section id="bill-gates">
             <h3><a href=""><font face="Comic Sans MS">Билл Гейтс</font></a></h3>
             <p><img src="img/Bill_Gates.jpg.webp" alt="На фото изображен Билл Гейтс" width="500"></p>
