--- a/Practices/Practice07/index.html
+++ b/Practices/Practice07/index.html
@@ -113,7 +113,7 @@
             <label>Язык программирования:</label><br>
             <label> <input type="radio" name="program-lang" value="C++"> C++</label><br>
             <label> <input type="radio" name="program-lang" value="PHP"> PHP</label><br>
-            <label> <input type="radio" name="program-lang" value="Python"> Python</label><hr>
+            <label> <input type="radio" name="program-lang" value="Python"> Python</label><br>
             <label for="additionalInfo">Дополнительная информация:</label><br>
             <textarea id="additionalInfo" name="additionalInfo" rows="4" cols="28" placeholder="Есть опыт программирования на С++" required></textarea><br> 
             <label>Секретное слово:<br><input type="password" name="secretWord" required></label><br><br>
