Добавила Тьюринга, изменила тег в цитате у Нельсона, изменила полужирное выделение в Библиотеке

--- a/Project/Computer_Geniuses/Library.html
+++ b/Project/Computer_Geniuses/Library.html
@@ -28,7 +28,7 @@
             <h3><a href=""><font face="Comic Sans MS">Алан Мэтисон Тьюринг</font></a></h3>
             <p><img src="img/Alan_Turing.jpg" alt="На фото изображен Алан Тьюринг" width="500"></p>
             <p align="justify">
-                <strong>Кто он: <font size="5" face="Comic Sans MS">А</font>лан Тьюринг</strong> &mdash; математик, криптоаналитик и логик. Его называют отцом теоретической информатики и искусственного интеллекта.
+                <strong>Кто он:</strong> <font size="5" face="Comic Sans MS">А</font>лан Тьюринг &mdash; математик, криптоаналитик и логик. Его называют отцом теоретической информатики и искусственного интеллекта.
                 <br>
                 <strong>Что он сделал:</strong> во время Второй мировой войны он разработал множество методов взлома немецких шифров. Тьюринг построил электромеханическую машину, которая могла найти настройки <em>машины Энигмы</em>. Он формализовал концепции вычислений и алгоритмов с помощью машины Тьюринга, машины, которая может быть адаптирована для симуляции логики любых алгоритмов.<br> 
                 <strong>Основные достижения:</strong> он был удостоен премии Смита, офицера Ордена Британской империи и члена Королевского общества. С 1966 года <i>«Ассоциация вычислительной техники»</i> ежегодно присуждает премию Тьюринга за вклад в вычислительное сообщество.
@@ -38,7 +38,7 @@
             <h3><a href=""><font face="Comic Sans MS">Билл Гейтс</font></a></h3>
             <p><img src="img/Bill_Gates.jpg.webp" alt="На фото изображен Билл Гейтс" width="500"></p>
             <p align="justify">
-                <strong>Кто он: </strong><font size="5" face="Comic Sans MS">Б</font>илл Гейтс</strong> &mdash; американский предприниматель, один из <em>основателей компании Microsoft</em>, неоднократно становился самым богатым человеком в мире по версии журнала <cite>«Forbes».</cite>
+                <strong>Кто он: </strong><font size="5" face="Comic Sans MS">Б</font>илл Гейтс &mdash; американский предприниматель, один из <em>основателей компании Microsoft</em>, неоднократно становился самым богатым человеком в мире по версии журнала <cite>«Forbes».</cite>
                 <br> 
                 <strong>Что он сделал:</strong> В течение первых 5 лет работы в Microsoft Гейтс лично следил за каждой строкой кода, которую компания отправляла, часто исправляя те, которые он считал ошибочными или неправильными. 
                 В первые дни он и Пол Аллен написали полный интерпретатор языка BASIC на ассемблере для компьютера, к которому у них даже не было доступа, и который имел только 4 Кбайт памяти. 
@@ -51,7 +51,7 @@
             <h3><a href=""><font face="Comic Sans MS">Деннис Ритчи</font></a></h3>
             <p><img src="img/Dennis_Ritchie.jpg" alt="На фото изображен Деннис Ритчи" width="500"></p>
             <p align="justify">
-                <strong>Кто он: <font size="5" face="Comic Sans MS">Д</font>еннис Ритчи</strong> был революционным ученым-компьютерщиком, который сыграл ключевую роль в разработке языка программирования «С» и операционной системы Unix. 
+                <strong>Кто он:</strong> <font size="5" face="Comic Sans MS">Д</font>еннис Ритчи был революционным ученым-компьютерщиком, который сыграл ключевую роль в разработке языка программирования «С» и операционной системы Unix. 
                 Он работал в Lucent Technologies & Bell Labs и защитил кандидатскую диссертацию на тему <i>«Структура программы и вычислительная сложность»</i>. 
                 Тем не менее он никогда официально не получил докторскую степень.
                 <br> 
