--- a/Project/Computer_Geniuses/Ted_Nelson.html
+++ b/Project/Computer_Geniuses/Ted_Nelson.html
@@ -24,11 +24,17 @@
     <main>
         <section>
             <blockquote>
-                <p><strong>«Хорошая новость о компьютерах заключается в том, что они делают то, что Вы им говорите. 
-                Плохая новость заключается в том, что они делают то, что Вы им говорите».</strong></p>  
-                <cite>- Тед Нельсон</cite>
-                <hr>
+                <p>
+                    <strong>
+                        «Хорошая новость о компьютерах заключается в том, что они делают то, что Вы им говорите. 
+                        Плохая новость заключается в том, что они делают то, что Вы им говорите».
+                    </strong>
+                </p>  
             </blockquote>
+            <p>
+                - Тед Нельсон
+            </p>
+            <hr>
             <h1>Теодор Холм Нельсон</h1>
             <p align="justify">
                 Родившийся 17 июня 1937 году в Чикаго, Иллинойс, США, Теодор Холм Нельсон &mdash; американский философ, ученый в области информатики и социолог. 
@@ -263,7 +269,7 @@
                 Она охватывала большую часть его философии информационных технологий и концептуальной структуры программного обеспечения.
             </p>
             <h3>Possiplex</h3>
-            <p align="justify">Последней книгой Нельсона стала автобиография, выпущенная в 2011 году под названием <a href=https://www.amazon.com/Possiplex-Ted-Nelson/dp/089347004X?tag=historycomput-20&ref_=as_li_ss_tl&linkCode=sl1&linkId=a9db5fcdae5e98a25e83364e1df1f455 target="_blank" title="Перейти на Amazon"><cite>«Possiplex»</cite></a>.
+            <p align="justify">Последней книгой Нельсона стала автобиография, выпущенная в 2011 году под названием <a href="https://www.amazon.com/Possiplex-Ted-Nelson/dp/089347004X?tag=historycomput-20&ref_=as_li_ss_tl&linkCode=sl1&linkId=a9db5fcdae5e98a25e83364e1df1f455" target="_blank" title="Перейти на Amazon"><cite>«Possiplex»</cite></a>.
             </p>
             <hr>
             <p align="justify">
