добавила ссылку на Тьюринга в Библиотеке

--- a/Project/Computer_Geniuses/Library.html
+++ b/Project/Computer_Geniuses/Library.html
@@ -25,7 +25,7 @@
         <h2>Ученные, изменившие компьютерный мир</h2>
         <hr>
         <section id="alan-turing">
-            <h3><a href=""><font face="Comic Sans MS">Алан Мэтисон Тьюринг</font></a></h3>
+            <h3><a href="Alan_Turing.html"><font face="Comic Sans MS">Алан Мэтисон Тьюринг</font></a></h3>
             <p><img src="img/Alan_Turing.jpg" alt="На фото изображен Алан Тьюринг" width="500"></p>
             <p align="justify">
                 <strong>Кто он:</strong> <font size="5" face="Comic Sans MS">А</font>лан Тьюринг &mdash; математик, криптоаналитик и логик. Его называют отцом теоретической информатики и искусственного интеллекта.
